--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <center>
   <h1 class="btn btn-info heading">IA de Localização de Objetos <p>O nome de entrada que você fornecer deverá ser o mesmo presente no modelo CoCoSSD, apenas assim o objeto será detectado</p></h1>
   <br><br>
-  <input id="caixaDetexto" type="text">
+  <input id="caixaDetexto" type="text" placeholder="Inserir nome do objeto em inglês">
   <br><br>
   <button onclick="start()" class="btn btn-success" id="start">Iniciar</button>
   <br><br>
